# cmw

./: .cmw_prompt.md  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  MYPY_IMPROVEMENTS.md  PHASE1_VERIFICATION_REPORT.md  README.md  RELEASE_NOTES_v0.3.1.md  SECURITY.md  SESSION_CONTEXT.md  V0.3.0_PLAN.md  coverage.json  coverage_output.txt  mypy_final_report.txt  pyproject.toml  requirements.txt  setup.py
.claude-plugin/: marketplace.json
.github/workflows/: tests.yml
demo-blog-api/: .cmw_prompt.md
demo-blog-api/shared/coordination/: tasks.json
demo-blog-api/shared/docs/: requirements.md
docs/: CLAUDE_CODE_INTEGRATION.md  FEATURES.md  IMPROVEMENTS.md  ROADMAP.md  SECURITY_AUDIT.md  TESTING.md  WHY_CMW.md
docs/archive/: ARCHITECTURE.md  CONTRIBUTING.md  DIRECTORY_LAYOUT.md  GETTING_STARTED.md  IMPROVEMENTS.md  PHASE_1_2_COMPLETED.md  README.md  SETUP.md  multiworker-framework-plan-v3.md  phase-1-implementation-guide.md  public-release-plan.md
docs/assets/: README_DEMO_SECTION.md  SETUP_VHS.md  demo-dashboard.tape  demo-graph.tape  demo-quickstart-v2.tape  demo-quickstart.tape  sample-requirements.md
docs/planning/: architecture-change-summary.md  multiworker-framework-plan-v3.md  phase-9-plan.md  public-release-plan.md  simple-todo-development-plan.md
examples/: todo-api-requirements.md
src/cmw/: __init__.py  api_client.py  cli.py  conflict_detector.py  coordinator.py  dashboard.py  dependency_validator.py  error_handler.py  executor.py  git_integration.py  graph_visualizer.py  interactive_fixer.py  models.py  progress_tracker.py  prompt_generator.py  requirements_generator.py  requirements_parser.py  response_parser.py  state_manager.py  static_analyzer.py  task_filter.py  task_provider.py  templates.py  utils.py  workers.py
tests/: test_cli_validate.py  test_coordinator.py  test_dashboard.py  test_dependency_validator.py  test_edge_cases.py  test_git_integration.py  test_integration.py  test_performance.py  test_reliability.py  test_requirements_generator.py  test_requirements_parser.py  test_security.py  test_static_analyzer.py
(+2 files in other folders)
